<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <parent>
        <groupId>com.github.phillip-kruger.graphql</groupId>
        <artifactId>graphql-example-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../</relativePath>
    </parent>
    
    <artifactId>person-example</artifactId>
    <packaging>war</packaging>
    
    <name>GraphQL Demo :: Person Example</name>
    
    <properties>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Java version -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        
        <lombok.version>1.18.12</lombok.version>    
        <javafaker.version>1.0.2</javafaker.version>
        
        <microProfile.version>3.3</microProfile.version>
        <openapi-ui.version>1.1.4</openapi-ui.version>
        <smallrye-graphql.version>1.0.1</smallrye-graphql.version>
        
    </properties>
    
    <dependencies>
        <!-- MicroProfile -->
        <dependency>
            <groupId>org.eclipse.microprofile</groupId>
            <artifactId>microprofile</artifactId>
            <version>${microProfile.version}</version>
            <type>pom</type>
            <scope>provided</scope>
        </dependency>
        
        <!-- GraphQL -->
        <dependency>
            <groupId>io.smallrye</groupId>
            <artifactId>smallrye-graphql-servlet</artifactId>
            <version>${smallrye-graphql.version}</version>
        </dependency>
    
        <!-- Swagger UI -->
        <dependency>
            <groupId>org.microprofile-ext.openapi-ext</groupId>
            <artifactId>openapi-ui</artifactId>
            <version>${openapi-ui.version}</version>
            <scope>runtime</scope>
        </dependency>
        
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- Java Faker -->
        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>${javafaker.version}</version>
        </dependency>
        
    </dependencies>
    
    <build>
        <finalName>${project.artifactId}</finalName>
        
        <plugins>
        
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>2.0.2.Final</version>    
                <configuration>
                    <version>19.0.0.Final</version> 
                    <server-config>standalone-microprofile.xml</server-config>
                    <systemProperties>
                        <jboss.tx.node.id>1</jboss.tx.node.id>
                    </systemProperties>
                    <!-- So that you can log into localhost:9990 -->
                    <add-user>
                        <users>
                            <user>
                                <username>admin</username>
                                <password>admin</password>
                                <groups>
                                    <group>admin</group>
                                </groups>
                            </user>
                        </users>
                    </add-user>
                </configuration>
            </plugin>    
        </plugins>
                
    </build>
    
    <profiles>
        <profile>
            <id>jdk11plus</id>
            <activation>
                <jdk>[11,)</jdk>
            </activation>
            <properties>
                <jboss.extra.opts>--add-modules java.se</jboss.extra.opts>
            </properties>
        </profile>
    </profiles>
    
    
</project>
